# ReSol

./: .env.example  .gitignore  README.md  RELEASE.md
.claude/: launch.json
.github/workflows/: pages.yml
anchor/: Anchor.toml  package.json  pnpm-lock.yaml
anchor/programs/resol_escrow/: Cargo.toml
anchor/programs/resol_escrow/src/: lib.rs
anchor/tests/: resol_escrow.ts
app/: README.md  next.config.ts  package.json  pnpm-lock.yaml
app/scripts/: verify-devnet-program.mjs  verify-supabase.mjs
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/activity/: page.tsx
app/src/app/listing/: page.tsx
app/src/app/profile/: page.tsx
app/src/app/sell/: page.tsx
app/src/components/activity/: HandoffQR.tsx  QRScanner.tsx  RatingModal.tsx
app/src/components/layout/: AppShell.tsx  BottomTabBar.tsx  HowItWorksModal.tsx  TopBar.tsx
app/src/components/listing/: Carousel.tsx  ListingCard.tsx
app/src/components/providers/: AuthProvider.tsx  Providers.tsx
app/src/components/ui/: Button.tsx  Identicon.tsx  Skeleton.tsx  StarRating.tsx  Toaster.tsx
app/src/components/wallet/: ConnectButton.tsx  ConnectGate.tsx
app/src/lib/: constants.ts  crypto.ts  data.ts  format.ts  geo.ts  supabaseClient.ts  toast.ts  types.ts
app/src/lib/anchor/: program.ts  resol_escrow.json  resol_escrow.ts
app/src/lib/hooks/: useProgram.ts
supabase/: config.toml  seed.sql
supabase/migrations/: 20260613000001_init.sql  20260613000002_storage.sql
