[package]
name = "resol_escrow"
version = "0.1.0"
description = "Resol marketplace USDC escrow"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "resol_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Build with `--features mainnet` to accept canonical mainnet USDC.
mainnet = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
